[gd_scene load_steps=14 format=3 uid="uid://cktcl3yjma34l"]

[ext_resource type="Theme" uid="uid://dwqhs78076qut" path="res://addons/agent/ui/resource/AgentTheme.tres" id="1_3c5pc"]
[ext_resource type="Script" uid="uid://7x5ejtpqe0r4" path="res://addons/agent/ui/models/supplier_item.gd" id="1_cxw2j"]
[ext_resource type="Texture2D" uid="uid://btnh1plrm3etf" path="res://addons/agent/icons/newicon/Icon_arrowdown.svg" id="1_vka0h"]
[ext_resource type="Texture2D" uid="uid://yhceflqqddt3" path="res://addons/agent/icons/newicon/Icon_more.svg" id="2_vka0h"]
[ext_resource type="Texture2D" uid="uid://dv0l7ve7m51jf" path="res://addons/agent/icons/newicon/Icon_edit.svg" id="3_omc8c"]
[ext_resource type="Texture2D" uid="uid://b2el7xc75pfe7" path="res://addons/agent/icons/newicon/Icon_bin.svg" id="4_cxw2j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omc8c"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.15686275, 0.15686275, 0.15686275, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3c5pc"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3019608, 0.3019608, 0.3019608, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d56vv"]
content_margin_left = 8.0
content_margin_top = 2.0
content_margin_right = 8.0
content_margin_bottom = 2.0
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cxw2j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_omc8c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxw2j"]
content_margin_left = 8.0
content_margin_top = 2.0
content_margin_right = 8.0
content_margin_bottom = 2.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.15686275, 0.15686275, 0.15686275, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3c5pc"]

[node name="SupplierItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_3c5pc")
theme_override_styles/panel = SubResource("StyleBoxFlat_omc8c")
script = ExtResource("1_cxw2j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="SupplierShow" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SupplierShow"]
layout_mode = 2

[node name="ExpendSupplierButton" type="TextureButton" parent="VBoxContainer/SupplierShow/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("1_vka0h")
stretch_mode = 5
flip_v = true

[node name="Label" type="Label" parent="VBoxContainer/SupplierShow/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3c5pc")
text = "供应商"

[node name="SupplierTitle" type="Label" parent="VBoxContainer/SupplierShow/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "未命名供应商"

[node name="MoreActionButton" type="MenuButton" parent="VBoxContainer/SupplierShow/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("2_vka0h")
item_count = 2
popup/item_0/text = "编辑"
popup/item_0/icon = ExtResource("3_omc8c")
popup/item_0/id = 0
popup/item_1/text = "删除"
popup/item_1/icon = ExtResource("4_cxw2j")
popup/item_1/id = 1

[node name="CheckModelButton" type="Button" parent="VBoxContainer/SupplierShow/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "检测供应商是否可用"
mouse_default_cursor_shape = 2
theme_type_variation = &"SecondaryButton"
text = "检测"

[node name="RemoveSupplierButton" type="Button" parent="VBoxContainer/SupplierShow/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "删除供应商"
mouse_default_cursor_shape = 2
theme_type_variation = &"DangerButton"
text = "删除"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SupplierEdit" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SupplierEdit"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SupplierEdit/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "编辑供应商"

[node name="EditModelButton" type="Button" parent="VBoxContainer/SupplierEdit/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_d56vv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d56vv")
theme_override_styles/hover = SubResource("StyleBoxFlat_d56vv")
theme_override_styles/disabled = SubResource("StyleBoxFlat_d56vv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cxw2j")
text = "编辑模型"

[node name="CancelSaveButton" type="Button" parent="VBoxContainer/SupplierEdit/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_d56vv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d56vv")
theme_override_styles/hover = SubResource("StyleBoxFlat_d56vv")
theme_override_styles/disabled = SubResource("StyleBoxFlat_d56vv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_omc8c")
text = "取消"

[node name="SaveButton" type="Button" parent="VBoxContainer/SupplierEdit/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "保存供应商"
mouse_default_cursor_shape = 2
theme_type_variation = &"PrimaryButton"
text = "保存"

[node name="Label4" type="Label" parent="VBoxContainer/SupplierEdit"]
layout_mode = 2
text = "供应商名称"

[node name="SupplierName" type="LineEdit" parent="VBoxContainer/SupplierEdit"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_cxw2j")
placeholder_text = "请输入供应商名称"

[node name="Label" type="Label" parent="VBoxContainer/SupplierEdit"]
layout_mode = 2
text = "选择API类型"

[node name="SupplierAPIType" type="OptionButton" parent="VBoxContainer/SupplierEdit"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "支持的API类型。"
theme_override_styles/normal = SubResource("StyleBoxFlat_cxw2j")
selected = 0
item_count = 3
popup/item_0/text = "Open AI"
popup/item_0/id = 0
popup/item_1/text = "DeepSeek"
popup/item_1/id = 1
popup/item_2/text = "Ollama"
popup/item_2/id = 2

[node name="SupplierAPITypeTips" type="RichTextLabel" parent="VBoxContainer/SupplierEdit"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0.63106036, 0.64326394, 0.6615606, 1)
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
theme_override_styles/normal = SubResource("StyleBoxEmpty_3c5pc")
bbcode_enabled = true
text = "[b]说明[/b]：
open ai类型表示按照open ai公司开发的标准。适用于目前市面上的大部分模型。
[b]可使用的平台[/b]：DeepSeek、MoonShot、硅基流动等。
[b]不可以使用的[/b]：Claude AI、Gemini、以及由于GPT4.0以后的版本都重构了结构，所以不支持新版本的GPT。"
fit_content = true

[node name="Label2" type="Label" parent="VBoxContainer/SupplierEdit"]
layout_mode = 2
text = "API 基础 URL"

[node name="SupplierBaseURL" type="LineEdit" parent="VBoxContainer/SupplierEdit"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_cxw2j")
placeholder_text = "示列: https://api.openai.com"

[node name="Label3" type="Label" parent="VBoxContainer/SupplierEdit"]
layout_mode = 2
text = "API Key"

[node name="SupplierSecretKey" type="LineEdit" parent="VBoxContainer/SupplierEdit"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_cxw2j")
placeholder_text = "请输入Key"
emoji_menu_enabled = false
virtual_keyboard_type = 6
secret = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ExpendModelButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "展开/收起模型列表"
mouse_default_cursor_shape = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("1_vka0h")
stretch_mode = 5
flip_v = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "模型列表"

[node name="AddModelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "添加模型"
mouse_default_cursor_shape = 2
theme_type_variation = &"PrimaryButton"
text = "添加模型"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingModelList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckSupplierRequest" type="HTTPRequest" parent="."]
use_threads = true
